--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
             android:exported="true">
         </activity>
         <activity
+            android:name=".view.AboutActivity"
+            android:exported="true">
+        </activity>
+        <activity
             android:name=".view.MainActivity"
             android:exported="true">
             <intent-filter>
