--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,8 @@ dependencies {
     //Google Play Review API
     implementation 'com.google.android.play:review:2.0.0'
     implementation 'com.google.android.play:review-ktx:2.0.0'
+
+    //Custom Tabs
+    implementation 'androidx.browser:browser:1.4.0'
+
 }
