--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,10 @@
             android:exported="true">
         </activity>
         <activity
+            android:name=".view.OnboardingActivity"
+            android:exported="true">
+        </activity>
+        <activity
             android:name=".view.AboutActivity"
             android:exported="true">
         </activity>
