--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,14 @@ plugins {
 }
 
 android {
+    signingConfigs {
+        release {
+            storeFile file('/Users/onur/Desktop/game projects/keystores/bignumkey')
+            storePassword '668748bignum'
+            keyAlias 'key0'
+            keyPassword '668748bignum'
+        }
+    }
     compileSdk 32
 
     defaultConfig {
@@ -21,6 +29,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     compileOptions {
