--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,14 +68,15 @@ dependencies {
     def dynamic_animation_version = '1.0.0'
     implementation "androidx.dynamicanimation:dynamicanimation:$dynamic_animation_version"
 
-
     // Views
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.2.0"
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation 'junit:junit:4.+'
+
+    // Testing
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
@@ -88,6 +89,4 @@ dependencies {
 
     //AdMob
     implementation 'com.google.android.gms:play-services-ads:21.0.0'
-
-
 }
