--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             android:name=".view.OnboardingActivity"
             android:exported="true" />
         <activity
-            android:windowSoftInputMode="stateVisible|adjustResize"
+            android:windowSoftInputMode="adjustResize"
             android:name=".view.FeedbackActivity"
             android:exported="true" />
         <activity
