upgrade ads version and add minify

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,8 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
         }
@@ -91,5 +92,5 @@ dependencies {
     implementation 'androidx.browser:browser:1.4.0'
 
     //AdMob
-    implementation 'com.google.android.gms:play-services-ads:21.0.0'
+    implementation 'com.google.android.gms:play-services-ads:21.1.0'
 }
